# mcp-local-router

./: .gitignore  AGENTS.md  Cargo.toml  README.md  mcp.example.json  mock-mcp.js
.cursor/rules/: project-briefing.mdc
.github/workflows/: release.yml
context/: rmcp-example.md
src/: main.rs
