[package]
name = "local-router"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-client = "0.1"
mcp-core = "0.1"
mcp-server = "0.1"
mcp-spec = "0.1"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing = "0.1.41"

[features]
cargo-clippy = []
