[package]
name = "local-router"
version = "0.1.0"
edition = "2021"

[dependencies]
# Enable required features for rmcp
rmcp = { version = "0.1", features=["client","server","macros", "transport-child-process", "transport-sse-server"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.81"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing = "0.1.41"
env_logger = "0.10"
log = "0.4"

[features]
cargo-clippy = []
