[package]
name = "local-router"
version = "0.1.0"
edition = "2021"

[dependencies]
# Enable required features for rmcp
rmcp = { version = "0.2.0", features = [
  "client",
  "server",
  "macros",
  "transport-child-process",
  "transport-sse-server",
] }
process-wrap = { version = "8.2", features = ["tokio1"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.81"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing = "0.1.41"
log = "0.4"
tracing-log = "0.1"
axum = { version = "0.8" }
futures = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
rand = "0.9"

[features]
cargo-clippy = []
